Feat: Added Swagger for getLabel API
